--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,16 @@
+@font-face {
+  font-family: 'barlowcondensed';
+  src: url('../public/fonts/barlowcondensed-bold-webfont.woff2') format('woff2'),
+    url('../public/fonts/barlowcondensed-bold-webfont.woff') format('woff');
+}
+
 body {
+  font-family: 'barlowcondensed', sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'barlowcondensed', sans-serif;
 }
