--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,54 @@
     url('../public/fonts/barlowcondensed-bold-webfont.woff') format('woff');
 }
 
+@font-face {
+  font-family: 'icomoon';
+  src: url('../public/fonts/icomoon.eot?cswvum');
+  src: url('../public/fonts/icomoon.eot?cswvum#iefix') format('embedded-opentype'),
+    url('../public/fonts/icomoon.ttf?cswvum') format('truetype'),
+    url('../public/fonts/icomoon.woff?cswvum') format('woff'),
+    url('../public/fonts/icomoon.svg?cswvum#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"],
+[class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-home:before {
+  content: "\e900";
+}
+
+.icon-home2:before {
+  content: "\e901";
+}
+
+.icon-home3:before {
+  content: "\e902";
+}
+
+.icon-pencil:before {
+  content: "\e905";
+}
+
+.icon-pencil2:before {
+  content: "\e906";
+}
+
 body {
   font-family: 'barlowcondensed', sans-serif;
   margin: 0;
